[project]
name = "fhir-scripts"
version = "0.1.0"
description = ""
authors = [
    { name = "Alexander Essenwanger", email = "alexander.essenwanger@gematik.de" },
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.11.9,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
fhirscripts = "fhir_scripts.main:main"

[dependency-groups]
dev = ["black (>=25.9.0,<26.0.0)"]

[project.optional-dependencies]
igtools = ["igtools @ git+https://github.com/onyg/req-tooling"]
epatools = ["epatools @ git+https://github.com/onyg/epa-tools.git"]
publishtools = [
    "publish-tools @ git+https://github.com/gematik/publish-tools.git",
]
