[project]
name = "fhir-scripts"
version = "0.20.1"
description = ""
authors = [
    { name = "Alexander Essenwanger", email = "alexander.essenwanger@gematik.de" },
]
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.11.9,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "requests (>=2.32.5,<3.0.0)",
]

[project.scripts]
fhirscripts = "fhir_scripts.main:main"

[dependency-groups]
dev = ["black (>=25.9.0,<26.0.0)"]
